[metadata]
name = devnest
author = Michal Pryc
author-email = rhos-ci@redhat.com
maintainer = Michal Pryc
maintainer-email = rhos-ci@redhat.com
summary = TBD
description-file =
    README.rst
    ChangeLog
home-page = https://github.com/rhos-infra/devnest
license = BSD
classifier =
    Development Status :: 5 - Production/Stable
    Environment :: Other Environment
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Internet :: WWW/HTTP
keywords =
    jenkins

[files]
packages =
    devnest

[entry_points]
console_scripts =
    devnest = devnest.lib.cli:main

[egg_info]
egg_base = .

[bdist_wheel]
universal = 1

[flake8]
max-line-length=160
# debug.py is excluded because is copied from Ansible 2.3+
exclude=build,.eggs,.tox,plugins/callbacks/debug.py
statistics=yes
ignore = D

[pbr]
warnerrors = true
